# get-oodle-lib

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ruff.yml  test.yml
src/get_oodle_lib/: __main__.py  cli.py  data_structures.py  initialization.py  oodle_lib_core.py
src/get_oodle_lib/common/: __init__.py  argument_parser.py
tests/: test_argument_parser.py
