[project]
name = "get-oodle-lib"
version = "0.2.0"
description = "Get Oodle library for Unreal Engine"
license = "MIT OR Apache-2.0"
authors = [
    { name = "Youn Mélois", email = "youn@melois.dev" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "parse-commit-gitdeps-xml>=0.1.0,<0.2.0",
]

[project.urls]
Repository = "https://github.com/sehnryr/get-oodle-lib"

[project.scripts]
get-oodle-lib = "get_oodle_lib.__main__:main"

[tool.uv.sources]
parse-commit-gitdeps-xml = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["uv_build>=0.11.31,<0.12"]
build-backend = "uv_build"
