[project]
name = "get-oodle-lib"
version = "1.0.0"
description = ""
license = "GPL-3.0-or-later"
authors = [
  { name = "Youn Mélois", email = "youn@melois.dev" },
  { name = "Mythical-Github", email = "MythicalData@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "parse-commit-gitdeps-xml>=0.1.1",
    "rich-click>=1.9.8",
]

[project.scripts]
get_oodle_lib = "get_oodle_lib.__main__:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
